# termui

./: .gitignore  .pre-commit-config.yaml  .pylintrc  404.html  CHANGELOG.md  CONTRIBUTING.MD  LICENSE.md  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  setup.py  test.py
.github/workflows/: black_format.yml  bumpversion.yml  ci.yml  lint.yml  pre-commit.yml  publish-docs.yml  pylint.yml  release.yml  ruff.yml  type-check.yml
api/: index.html
api/app/: index.html
api/char/: index.html
api/color/: index.html
api/cursor/: index.html
api/dom/: index.html
api/errors/: index.html
api/events/: index.html
api/layout/: index.html
api/layouts/: index.html
api/layouts/grid/: index.html
api/layouts/horizontal/: index.html
api/layouts/vertical/: index.html
api/logger/: index.html
api/renderer/: index.html
api/screen/: index.html
api/widget/: index.html
api/widgets/: index.html
api/widgets/button/: index.html
api/widgets/container/: index.html
api/widgets/progress_bar/: index.html
api/widgets/text/: index.html
changelog/: index.html
contributing/: index.html
docs/: contributing.md  index.md
docs/api/: app.md  char.md  color.md  cursor.md  dom.md  errors.md  events.md  index.md  layout.md  logger.md  renderer.md  screen.md  widget.md
docs/api/layouts/: base.md  grid.md  horizontal.md  vertical.md
docs/api/widgets/: button.md  container.md  progress_bar.md  text.md
docs/getting-started/: concepts.md  installation.md  quickstart.md
docs/guides/: input.md  layouts.md  rendering.md  theming.md  widgets.md
getting-started/concepts/: index.html
getting-started/installation/: index.html
getting-started/quickstart/: index.html
guides/input/: index.html
guides/layouts/: index.html
guides/rendering/: index.html
guides/theming/: index.html
guides/widgets/: index.html
roadmap/: index.html
src/: app.py  div.py  keys.py  screen.py
src/termui/: __init__.py  _ansi.py  _context_manager.py  _dom_tree.py  _driver.py  _keys.py  _utils.py  _xterm_parser.py  app.py  char.py  color.py  constants.py  cursor.py  decorators.py  div.py  dom.py  dom_node.py  dom_tree.py  draw_rectangle.py  driver.py  errors.py  events.py  geometry.py  input_handler.py  keybind.py  keys.py  layout.py  logger.py  message.py  messages.py  render_geometry.py  renderer.py  screen.py  theme.py  time.py  utils.py  widget.py
src/termui/colors/: __init__.py  ansi.py  colorize.py  rgb.py
src/termui/dom/: __init__.py  dom_node.py  dom_tree.py
src/termui/drivers/: __init__.py  (+6 more)
(+41 files in other folders)
