[project]
name = "termui"
version = "0.2.2"
description = "A modern, declarative, and efficient Terminal UI library for Python."
authors = [
    { name = "Josh Lawson", email = "joshlawson100@outlook.com" }
]
readme = "README.md"
requires-python = ">=3.10,<4.0"
license = { text = "MIT" }
dependencies = [
    "mkdocs (>=1.6.1,<2.0.0)",
    "mkdocstrings[python] (>=0.30.0,<0.31.0)",
    "mkdocs-material (>=9.6.17,<10.0.0)",
    "mkdocs-git-revision-date-localized-plugin (>=1.4.7,<2.0.0)",
    "black (>=25.1.0,<26.0.0)",
    "poetry-core (>=2.0.0)",
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[project.urls]
homepage = "https://python-poetry.org/"
repository = "https://github.com/JoshLawson10/termui"
