[tool.poetry]
name = "termui"
version = "0.2.2"
description = "A modern, declarative, and efficient Terminal UI library for Python."
authors = ["Josh Lawson <joshlawson100@outlook.com>"]
readme = "README.md"
license = "MIT"
homepage = "https://github.com/JoshLawson10/termui"
repository = "https://github.com/JoshLawson10/termui"
packages = [{ include = "termui", from = "src" }]

[tool.poetry.dependencies]
python = ">=3.10,<4.0"

[tool.poetry.group.dev.dependencies]
mkdocs = ">=1.6.1,<2.0.0"
mkdocstrings = ">=0.30.0,<0.31.0"
mkdocs-material = ">=9.6.17,<10.0.0"
mkdocs-git-revision-date-localized-plugin = ">=1.4.7,<2.0.0"
black = ">=25.1.0,<26.0.0"
pytest = ">=8.0.0,<9.0.0"
pylint = ">=3.0.0,<4.0.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"