[tool.poetry]
name = "termui"
version = "0.2.2"
description = "A modern, declarative, and efficient Terminal UI library for Python."
authors = ["Josh Lawson <joshlawson100@outlook.com>"]
readme = "README.md"
license = "MIT"
homepage = "https://joshlawson10.github.io/termui"
repository = "https://github.com/JoshLawson10/termui"
packages = [{ include = "termui", from = "src" }]

[tool.poetry.dependencies]
python = ">=3.10,<4.0"

[tool.poetry.group.dev.dependencies]
poetry-core = ">=2.0.0"
mkdocs = "^1.6.1"
mkdocstrings = "^0.30.0"
mkdocstrings-python = "^1.12.0"
mkdocs-material = "^9.6.19"
mkdocs-git-revision-date-localized-plugin = "^1.4.7"
black = "^25.1.0"
pytest = "^8.4.2"
pylint = "^3.3.8"
pre-commit = "^4.3.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
